--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,10 @@
             <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a
                     href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
             {% endif %}
-            <p><img src="/images/license_cc-by-nc-sa.png" alt=""></p>
+            <p><a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+                <img src="/images/license_cc-by-nc-sa.png" alt="">
+                Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)
+            </a></p>
         </footer>
     </div>
 </body>
